--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -12,24 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :groupid %><br />
+    <%= f.label "Group name:" %><br />
     <%= f.text_field :groupid %>
   </div>
-  <div class="field">
-    <%= f.label :user_ids %><br />
-
-    <% 
-  userarray = []
-  User.fields("userid").all.each { |user|
-    userarray.push(user.userid)
-  } %> 
-
-    <%= f.select :user_ids, userarray %>
-  </div>
-  <div class="field">
-    <%= f.label :public %><br />
-    <%= f.check_box :public %>
-  </div>
+ 
   <div class="actions">
     <%= f.submit %>
   </div>
